# paperchase

./: .env.example  .gitignore  README.md  local.settings.json  pyproject.toml  requirements.txt
QueryRag/: __init__.py  function.json
app/: fastapi_app.py  pipeline.py  reader.py  reranker.py  retriever.py
docker/: docker-compose.yml
docs/figs/: filestruct.txt  roadmap.txt
notebooks/: eda.ipynb
scripts/: build_index.py  clean_csv.py  dev_check.py  scratch.py
src/: cli.py  config.py
src/chains/: keyword_chain.py  retrieval_chain.py  summary_chain.py
src/eval/: datasets.py  dev_set.json  rag_metrics.py  run_eval.py
src/frontend/: gradio_frontend.py
src/vectorstore/: build_store.py
tests/: test_pipeline.py
